--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-java@v1.4.4
         with:
           java-version: '17'
+          distribution: 'temurin'
       
       - name: Build with Gradle
         run: ./gradlew bootJar
