--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,6 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql_db:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
+      VARIABLE: ${VARIABLE}
     depends_on:
       - database
