--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
       
       - name: Docker run
         run: |
-          docker stop dalcom-dev && docker rm dalcom-dev && rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
+          docker stop dalcom-dev && docker rm dalcom-dev && docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
           
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
           
