--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         
       - name: Generate Environment Variables Files For Production
         run: |
-          echo "${{ secrets.APPLICATION_SETTING }}" > ./src/main/resources/application.yml
+          echo "VARIABLE=$VARIABLE" >> ./.env
         env:
           VARIABLE: ${{ secrets.VARIABLE }}
       
@@ -58,8 +58,5 @@ jobs:
       
       - name: Docker run
         run: |
-          docker stop dalcom-dev && docker rm dalcom-dev && docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
-          
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
-          
-          docker run -d -p 8080:8080 --name dalcom-dev ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
+          docker stop dalcom-dev && docker rm dalcom-dev && rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
+          docker-compose -f up -d
