--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop dalcom-dev && docker rm dalcom-dev && docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
-          docker-compose -f up -d
+          docker-compose up -d
