--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,11 @@ jobs:
       - name: Deploy on deploy server
         if: contains(github.ref, 'deploy')
         uses: appleboy/ssh-action@v0.1.10
+        env:
+          MYSQL_URL: ${{ secrets.MYSQL_URL }}
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         with:
           host: ${{ secrets.AWS_HOST_DEPLOY }}
           username: ${{ secrets.AWS_SSH_USERNAME }}
@@ -80,21 +85,5 @@ jobs:
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
             docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:deploy
             docker stop ${{ env.ECR_REPOSITORY }}-deploy
-            docker run --rm -d -p 8080:8080 --name tokpeanut-api-deploy ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:deploy
-    #      - name: Login to ghcr
-    #        uses: docker/login-action@v2.2.0
-    #        with:
-    #          registry: ghcr.io
-    #          username: ${{ github.actor }}
-    #          password: ${{ secrets.GHCR_TOKEN }}
-    #
-    #      - name: Docker run
-    #        env:
-    #          SERVER_ENV: $SERVER_ENV
-    #          MYSQL_URL: ${{ secrets.MYSQL_URL }}
-    #          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-    #          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-    #        run: |
-    #          docker stop dalcom-dev && docker rm dalcom-dev && docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/dalcom-dev:latest
-    #          docker-compose up -d
+            docker-compose up -d
 
