--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,6 @@ jobs:
           script: |
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
-            docker-compose -f $COMPOSE down --rmi all
+            docker-compose -f ${{ env.COMPOSE }} down --rmi all
             docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-            docker-compose -f $COMPOSE up -d
+            docker-compose -f ${{ env.COMPOSE }} up -d
