build: Spring에 DB 정보가 전달되지 않는 문제 해결

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,11 @@ jobs:
           key: ${{ secrets.AWS_SSH_KEY }}
           script_stop: true
           script: |
+            touch ./.env
+            echo "MYSQL_URL=${{ secrets.MYSQL_URL }}" >> ./.env            
+            echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> ./.env
+            echo "MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}" >> ./.env
+            
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
             docker-compose -f ${{ env.COMPOSE }} down --rmi all
