--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create application.yml
         run: |
           cd ./src/main/resources
-          touch ./application-dev.yml
+          touch ./application.yml
           echo "${{ secrets.APPLICATION_SETTING }}" > ./application.yml
         shell: bash
 
