build: Update deploy.yml

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,4 +1,7 @@
 spring:
+  config:
+    activate:
+      on-profile: development
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dalcom
