save: 중간 저장 (S3 연동 세팅)

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -10,3 +10,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
