--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,13 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     use-root-path: true
+
+cloud:
+  aws:
+    credentials:
+      instance-profile: false
+    region:
+      auto: false
+      static: ap-northeast-2
+    stack:
+      auto: false
