feat(s3): S3 관련 설정 재정리
TODO: staging 서버 설정에 aws 및 s3 관련 값들 넣어 줘야 함

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -16,3 +16,8 @@ cloud:
     credentials:
       access-key: ${AWS_ACCESS_KEY}
       secret-key: ${AWS_SECRET_KEY}
+
+    s3:
+      presigned-url:
+        expiration-time-min: 60
+        bucket-name: ${AWS_S3_BUCKET}
