--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build with Gradle
-        run: gradle build
+        run: gradle build -x test
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
