feat: APIService 구현

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -21,3 +21,7 @@ cloud:
       presigned-url:
         expiration-time-min: 60
         bucket-name: ${AWS_S3_BUCKET}
+
+wasak:
+  api:
+    host: http://localhost:8000
