feature: 녹음 완료 요청 api 구현

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -22,6 +22,10 @@ cloud:
         expiration-time-min: 60
         bucket-name: ${AWS_S3_BUCKET}
 
+  ncp:
+    clova-speech:
+      callback-url-template: http://localhost:8080/api/v1/presentations/%d/speeches/%d/clova-result-callback
+
 wasak:
   api:
     host: http://localhost:8000
