--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 env:
   AWS_REGION: ap-northeast-2
   ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-  ECR_REPOSITORY: tokpeanut
+  ECR_REPOSITORY: dalcom
 
 
 jobs:
@@ -88,7 +88,7 @@ jobs:
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
             docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-            docker container stop dalcom-staging 2>/dev/null || true
-            docker container rm dalcom-staging 2>/dev/null || true
-            docker run -d -p 8080:8080 --name dalcom-staging ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+            docker container stop ${{ env.ECR_REPOSITORY }}-staging 2>/dev/null || true
+            docker container rm ${{ env.ECR_REPOSITORY }}-staging 2>/dev/null || true
+            docker run -d -p 8080:8080 --name ${{ env.ECR_REPOSITORY }}-staging ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
             docker images | awk '$1 == "${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
