--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,5 +90,5 @@ jobs:
             docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
             docker container stop ${{ env.ECR_REPOSITORY }}-staging 2>/dev/null || true
             docker container rm ${{ env.ECR_REPOSITORY }}-staging 2>/dev/null || true
-            docker run -d -p 8080:8080 --name ${{ env.ECR_REPOSITORY }}-staging ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+            docker run -d -p 8080:8080 --name ${{ env.ECR_REPOSITORY }}-staging ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest --net=host
             docker images | awk '$1 == "${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
