--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -24,7 +24,7 @@ cloud:
 
   ncp:
     clova-speech:
-      callback-url-template: http://localhost:8080/api/v1/presentations/%d/speeches/%d/clova-result-callback
+      callback-url-template: https://fdc3-221-148-248-129.ngrok-free.app/api/v1/presentations/%d/speeches/%d/clova-result-callback
 
 wasak:
   api:
