build: Sentry 설정 및 DB log 하향 조정

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -8,6 +8,7 @@ spring:
     username: dalcom_admin
     password: thisispassword123!
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
 
