--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -12,7 +12,7 @@ spring:
     username: dalcom_admin
     password: thisispassword123!
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
 
@@ -29,7 +29,7 @@ cloud:
 
   ncp:
     clova-speech:
-      callback-url-template: https://fdc3-221-148-248-129.ngrok-free.app/api/v1/presentations/%d/speeches/%d/clova-result-callback
+      callback-url-template: https://1abf-175-192-199-39.ngrok-free.app/api/v1/presentations/%d/speeches/%d/clova-result-callback
 
 wasak:
   api:
