--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.3
+
+      - name: Setup Java JDK
+        uses: actions/setup-java@v1.4.4
+        with:
+          java-version: '17'
+
       - name: Extract branch name
         shell: bash
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
@@ -25,24 +33,12 @@ jobs:
           echo "::set-output name=full_image_name::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"
           echo "::set-output name=image_name::${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"
 
-      - name: Checkout
-        uses: actions/checkout@v3.5.3
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.4
-        with:
-          java-version: '17'
-
-      - name: Set Branch Name
-        id: set-branch-name
-        run: echo "::set-output name=branch_name::${GITHUB_REF#refs/heads/}"
-
       - name: Set Application Setting
         id: set-application-setting
         run: |
-          if [ "${{ steps.set-branch-name.outputs.branch_name }}" == "staging" ]; then
+          if [ "${{ steps.extract_branch.outputs.branch_name }}" == "staging" ]; then
             echo "::set-output name=application_setting::${{ secrets.APPLICATION_SETTING_STAGING }}"
-          elif [ "${{ steps.set-branch-name.outputs.branch_name }}" == "production" ]; then
+          elif [ "${{ steps.extract_branch.outputs.branch_name }}" == "production" ]; then
             echo "::set-output name=application_setting::${{ secrets.APPLICATION_SETTING_PRODUCTION }}"
           fi
 
@@ -110,6 +106,15 @@ jobs:
           echo "::set-output name=full_image_name::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"
           echo "::set-output name=image_name::${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"
 
+      - name: Set Application Setting
+        id: set-application-setting
+        run: |
+          if [ "${{ steps.extract_branch.outputs.branch_name }}" == "staging" ]; then
+            echo "::set-output name=application_setting::${{ secrets.APPLICATION_SETTING_STAGING }}"
+          elif [ "${{ steps.extract_branch.outputs.branch_name }}" == "production" ]; then
+            echo "::set-output name=application_setting::${{ secrets.APPLICATION_SETTING_PRODUCTION }}"
+          fi
+
       - name: Deploy on server
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -118,6 +123,8 @@ jobs:
           key: ${{ secrets.AWS_SSH_KEY }}
           script_stop: true
           script: |
+            echo "${{steps.set-application-setting.outputs.application_setting}}" | awk '{print length}'
+            
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
             docker pull ${{ steps.set-image-name.outputs.full_image_name }}:latest
