build: branch 이름으로 application.yml 설정하도록 세팅

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,18 +45,11 @@ jobs:
             exit 1
           fi
 
-      #      - name: Create application.yml
-      #        run: |
-      #          cd ./src/main/resources
-      #          touch ./application-${{ steps.extract_branch.outputs.branch }}.yml
-      #          echo "${{ steps.set-application-setting.outputs.application_setting }}" > ./application-${{ steps.extract_branch.outputs.branch }}.yml
-      #        shell: bash
-
       - name: Create application.yml
         run: |
           cd ./src/main/resources
-          touch ./application-staging.yml
-          echo "${{ secrets.APPLICATION_SETTING }}" > ./application-staging.yml
+          touch ./application-${{ steps.extract_branch.outputs.branch }}.yml
+          echo "${{ steps.set-application-setting.outputs.application_setting }}" > ./application-${{ steps.extract_branch.outputs.branch }}.yml
         shell: bash
 
       - name: Gradle Setup
